Стилизовал секцию дополнительно под все сосотояния, добавил кнопке состояние

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -141,24 +141,40 @@ body {
 
 .additionally__wrapper {
   width: 320px;
+  margin-bottom: 32px;
   padding: 0 20px;
 }
 @media (min-width: 769px) {
   .additionally__wrapper {
     width: 769px;
+    margin-bottom: 72px;
     padding: 0 70px;
   }
 }
 @media (min-width: 1440px) {
   .additionally__wrapper {
     width: 1440px;
+    margin-bottom: 82px;
     padding: 0 110px;
+  }
+}
+
+.additionally__title {
+  margin: 0;
+  padding: 0;
+  line-height: 1.08;
+  margin-bottom: 34px;
+}
+@media (min-width: 769px) {
+  .additionally__title {
+    margin-bottom: 57px;
   }
 }
 
 @media (min-width: 769px) {
   .additionally__fields-container {
     width: 533px;
+    row-gap: 32px;
   }
 }
 @media (min-width: 1440px) {
@@ -167,17 +183,106 @@ body {
   }
 }
 
+.additionally__fields-container.additionally__fields-container {
+  margin-bottom: 34px;
+}
+@media (min-width: 769px) {
+  .additionally__fields-container.additionally__fields-container {
+    margin-bottom: 54px;
+  }
+}
+@media (min-width: 769px) {
+  .additionally__fields-container.additionally__fields-container {
+    margin-bottom: 61px;
+  }
+}
+
 .additionally__field-label {
   width: 220px;
+  min-height: 30px;
+  font: 200 1.6rem/1.12 "Oswald", Arial, sans-serif;
+}
+@media (min-width: 769px) {
+  .additionally__field-label {
+    min-height: 40px;
+    font: 200 2rem/normal "Oswald", Arial, sans-serif;
+  }
+}
+.additionally__field-label:not(:last-child) {
+  margin-bottom: 12px;
+}
+@media (min-width: 769px) {
+  .additionally__field-label:not(:last-child) {
+    margin-bottom: 0;
+  }
+}
+
+.additionally__field-input {
+  margin: 0;
+  padding: 0;
+  margin-right: 16px;
+}
+@media (min-width: 769px) {
+  .additionally__field-input {
+    margin-right: 20px;
+  }
 }
 
 .additionally__send-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 @media (min-width: 769px) {
   .additionally__send-container {
     flex-direction: row;
+    align-items: center;
+  }
+}
+
+.additionally__button-send {
+  padding: 12px 44px;
+  margin-bottom: 21px;
+  display: block;
+  width: 100%;
+  min-height: 40px;
+  font: 200 1.4rem/1.28 "Oswald", Arial, sans-serif;
+  font-size: 1.6rem;
+  line-height: 1.25;
+  color: #ffffff;
+  text-transform: uppercase;
+}
+.additionally__button-send:hover {
+  background-color: #5eaa2f;
+}
+.additionally__button-send:active {
+  color: rgba(255, 255, 255, 0.3);
+}
+@media (min-width: 769px) {
+  .additionally__button-send {
+    width: 282px;
+    min-height: 52px;
+    font-size: 2rem;
+    line-height: 0;
+    margin-bottom: 0;
+    margin-right: 64px;
+  }
+}
+@media (min-width: 1440px) {
+  .additionally__button-send {
+    width: 568px;
+    margin-right: 84px;
+  }
+}
+
+.additionally__required-field {
+  font: 400 1.4rem/1.28 "Lato", Arial, sans-serif;
+  line-height: 1.14;
+}
+@media (min-width: 769px) {
+  .additionally__required-field {
+    font: 400 1.6rem/1.5 "Lato", Arial, sans-serif;
+    line-height: 1;
   }
 }
 
@@ -371,9 +476,6 @@ body {
 .button {
   border: none;
   cursor: pointer;
-  padding: 0;
-  color: #000000;
-  text-decoration: none;
 }
 .button--primary {
   background-color: #68b738;
@@ -453,17 +555,20 @@ body {
 
 .comment__wrapper {
   width: 320px;
+  margin-bottom: 23px;
   padding: 0 20px;
 }
 @media (min-width: 769px) {
   .comment__wrapper {
     width: 769px;
+    margin-bottom: 65px;
     padding: 0 70px;
   }
 }
 @media (min-width: 1440px) {
   .comment__wrapper {
     width: 1440px;
+    margin-bottom: 67px;
     padding: 0 110px;
   }
 }
@@ -1111,7 +1216,6 @@ body {
 .main-nav__toggle {
   border: none;
   cursor: pointer;
-  padding: 0;
   display: block;
   margin-top: -15px;
   width: 24px;
@@ -1312,6 +1416,11 @@ body {
 .program-selection__field-label--program:not(:last-child) {
   margin-bottom: 13px;
 }
+@media (min-width: 769px) {
+  .program-selection__field-label--program {
+    min-height: 40px;
+  }
+}
 .program-selection__field-label:last-child {
   margin-bottom: 0;
 }
@@ -1370,15 +1479,6 @@ body {
 }
 .program-selection__field-text--radio {
   margin-right: 0;
-}
-.program-selection__field-text--radio::before {
-  content: "";
-  display: block;
-  width: 30px;
-  height: 30px;
-  background-color: #2d2dd8;
-  border-radius: 50%;
-  position: absolute;
 }
 
 .program-selection__field-input {
@@ -1907,21 +2007,17 @@ body {
 .field-label {
   display: flex;
   align-items: center;
-  font-weight: 200;
-  font-size: 1.6rem;
-  line-height: 1.12;
-  font-family: "Oswald", Arial, sans-serif;
+  font: 200 1.6rem/1.12 "Oswald", Arial, sans-serif;
   color: #444444;
   text-transform: uppercase;
 }
-.field-label--black {
-  color: #000000;
-}
 @media (min-width: 769px) {
   .field-label {
-    font-size: 2rem;
-    line-height: normal;
+    font: 200 2rem/normal "Oswald", Arial, sans-serif;
   }
+}
+.field-label--black {
+  color: #000000;
 }
 
 .textarea {
