--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -53,7 +53,7 @@ $font-description-medium-mobile: 200 1.4rem/1.28 "Oswald", Arial, sans-serif;
 $font-button-small-mobile: 200 1.4rem/1.28 "Oswald", Arial, sans-serif;
 $font-catalog-button-mobile: 200 1.6rem/1 "Oswald", Arial, sans-serif;
 
-$font-field-label-mobile: 200 1.6rem/1.12 "Oswald" Arial, sans-serif;
+$font-field-label-mobile: 200 1.6rem /1.12 "Oswald", Arial, sans-serif;
 $font-textarea-mobile: 200 1.6rem/1.12 "Oswald", Arial, sans-serif;
 
 /* === fonts-tablet === */
@@ -72,7 +72,7 @@ $font-description-medium-tablet: 200 2rem/1.5 "Oswald", Arial, sans-serif;
 $font-button-small-tablet: 200 2rem/1 "Oswald", Arial, sans-serif;
 $font-catalog-button-tablet: 200 2rem / normal "Oswald", Arial, sans-serif;
 
-$font-field-label-tablet: 200 2rem / normal "Oswald" Arial, sans-serif;
+$font-field-label-tablet: 200 2rem / normal "Oswald", Arial, sans-serif;
 $font-textarea-tablet: 200 2rem/1.5 "Oswald", Arial, sans-serif;
 
 /* === fonts-desktop === */
