--- a/src/sass/blocks/additionally.scss
+++ b/src/sass/blocks/additionally.scss
@@ -1,24 +1,41 @@
 .additionally__wrapper {
   width: $mobile-width;
 
+  margin-bottom: 32px;
   padding: 0 20px;
 
   @media (min-width: $tablet-width) {
     width: $tablet-width;
 
+    margin-bottom: 72px;
     padding: 0 70px;
   }
 
   @media (min-width: $desktop-width) {
     width: $desktop-width;
 
+    margin-bottom: 82px;
     padding: 0 110px;
+  }
+}
+
+.additionally__title {
+  @include indent-reset;
+
+  line-height: 1.08;
+
+  margin-bottom: 34px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 57px;
   }
 }
 
 .additionally__fields-container {
   @media (min-width: $tablet-width) {
     width: 533px;
+
+    row-gap: 32px;
   }
 
   @media (min-width: $desktop-width) {
@@ -26,15 +43,106 @@
   }
 }
 
+.additionally__fields-container.additionally__fields-container {
+  margin-bottom: 34px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 54px;
+  }
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 61px;
+  }
+}
+
 .additionally__field-label {
   width: 220px;
+  min-height: 30px;
+
+  font: $font-field-label-mobile;
+
+  @media (min-width: $tablet-width) {
+    min-height: 40px;
+
+    font: $font-field-label-tablet;
+  }
+
+  &:not(:last-child) {
+    margin-bottom: 12px;
+
+    @media (min-width: $tablet-width) {
+      margin-bottom: 0;
+    }
+  }
+}
+
+.additionally__field-input {
+  @include indent-reset;
+  margin-right: 16px;
+
+  @media (min-width: $tablet-width) {
+    margin-right: 20px;
+  }
 }
 
 .additionally__send-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
 
   @media (min-width: $tablet-width) {
     flex-direction: row;
+    align-items: center;
+  }
+}
+
+.additionally__button-send {
+  padding: 12px 44px;
+  margin-bottom: 21px;
+
+  display: block;
+
+  width: 100%;
+  min-height: 40px;
+
+  font: $font-button-small-mobile;
+  font-size: 1.6rem;
+  line-height: 1.25;
+  color: $color-2;
+  text-transform: uppercase;
+
+  &:hover {
+    background-color: $background-color-3-hover;
+  }
+
+  &:active {
+    color: rgba($color-2, 30%);
+  }
+
+  @media (min-width: $tablet-width) {
+    width: 282px;
+    min-height: 52px;
+
+    font-size: 2rem;
+    line-height: 0;
+
+    margin-bottom: 0;
+    margin-right: 64px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 568px;
+
+    margin-right: 84px;
+  }
+}
+
+.additionally__required-field {
+  font: $font-text-small-mobile;
+  line-height: 1.14;
+
+  @media (min-width: $tablet-width) {
+    font: $font-text-small-tablet;
+    line-height: 1;
   }
 }
