--- a/src/sass/blocks/field-label.scss
+++ b/src/sass/blocks/field-label.scss
@@ -2,20 +2,15 @@
   display: flex;
   align-items: center;
 
-  // не принимает переменную
-  font-weight: 200;
-  font-size: 1.6rem;
-  line-height: 1.12;
-  font-family: "Oswald", Arial, sans-serif;
+  font: $font-field-label-mobile;
   color: $color-5;
   text-transform: uppercase;
 
-  &--black {
-    color: $color-1;
+  @media (min-width: $tablet-width) {
+    font: $font-field-label-tablet;
   }
 
-  @media (min-width: $tablet-width) {
-    font-size: 2rem;
-    line-height: normal;
+  &--black {
+    color: $color-1;
   }
 }
