--- a/src/sass/blocks/catalog-list.scss
+++ b/src/sass/blocks/catalog-list.scss
@@ -3,8 +3,10 @@
 }
 
 .catalog-list__item {
-  width: 280px;
-  min-height: 190px;
+  padding: 11px 20px 14px;
+
+  width: 320px;
+  min-height: 233px;
 
   display: grid;
   grid-template-columns: repeat(2, 140px);
