--- a/src/sass/blocks/button.scss
+++ b/src/sass/blocks/button.scss
@@ -4,4 +4,8 @@
   &--primary {
     background-color: $background-color-3;
   }
+
+  &--secondary {
+    background-color: $background-color-4;
+  }
 }
