--- a/src/sass/blocks/contact-details.scss
+++ b/src/sass/blocks/contact-details.scss
@@ -24,7 +24,7 @@
 
   margin-bottom: 35px;
 
-  line-height: 26px;
+  line-height: 1.08;
 
   @media (min-width: $tablet-width) {
     margin-bottom: 76px;
