--- a/src/sass/global/variables.scss
+++ b/src/sass/global/variables.scss
@@ -31,6 +31,7 @@ $color-9: #e6e6e6;
 $color-10: #111111;
 $color-11: #e7e7e7;
 $color-12: #ff8282;
+$color-13: #222222;
 
 /* === background-colors === */
 $background-color-1: #000000;
@@ -45,6 +46,7 @@ $background-color-9: #e6e6e6;
 $background-color-10: #111111;
 $background-color-11: #e7e7e7;
 $background-color-12: #ff8282;
+$background-color-13: #222222;
 
 /* === fonts-mobile === */
 $font-site-list-mobile: 500 2rem/1 "Oswald", Arial, sans-serif;
@@ -55,13 +57,13 @@ $font-title-small-mobile: 200 2.4rem/1.54 "Oswald", Arial, sans-serif;
 $font-title-extra-small-mobile: 200 2.4rem/1 "Oswald", Arial, sans-serif;
 
 $font-text-small-mobile: 400 1.4rem/1.28 "Lato", Arial, sans-serif;
-$font-text-extra-small-mobile: 200 1.2rem/1 "Lato", Arial, sans-serif;
+$font-text-extra-small-mobile: 400 1.2rem/1 "Lato", Arial, sans-serif;
 
 $font-card-title-mobile: 200 1.6rem/1.25 "Oswald", Arial, sans-serif;
 $font-description-medium-mobile: 200 1.4rem/1.28 "Oswald", Arial, sans-serif;
 
 $font-button-small-mobile: 200 1.4rem/1.28 "Oswald", Arial, sans-serif;
-$font-catalog-button-mobile: 200 1.6rem/1 "Oswald", Arial, sans-serif;
+$font-catalog-button-mobile: 200 1.6rem/1.25 "Oswald", Arial, sans-serif;
 
 $font-field-label-mobile: 200 1.6rem /1.12 "Oswald", Arial, sans-serif;
 $font-textarea-mobile: 200 1.6rem/1.12 "Oswald", Arial, sans-serif;
@@ -75,7 +77,7 @@ $font-title-small-tablet: 200 3.6rem/1 "Oswald", Arial, sans-serif;
 $font-title-extra-small-tablet: 200 3rem/1.23 "Oswald", Arial, sans-serif;
 
 $font-text-small-tablet: 400 1.6rem/1.5 "Lato", Arial, sans-serif;
-$font-text-extra-small-tablet: 200 1.4rem/1 "Lato", Arial, sans-serif;
+$font-text-extra-small-tablet: 400 1.4rem/1 "Lato", Arial, sans-serif;
 
 $font-card-title-tablet: 200 2rem/1.2 "Oswald", Arial, sans-serif;
 $font-description-medium-tablet: 200 2rem/1.5 "Oswald", Arial, sans-serif;
@@ -95,7 +97,7 @@ $font-title-small-desktop: 200 3.6rem/1 "Oswald", Arial, sans-serif;
 $font-title-extra-small-desktop: 200 3rem/1.23 "Oswald", Arial, sans-serif;
 
 $font-text-small-desktop: 400 1.6rem/1.5 "Lato", Arial, sans-serif;
-$font-text-extra-small-desktop: 200 1.4rem/1 "Lato", Arial, sans-serif;
+$font-text-extra-small-desktop: 400 1.4rem/1 "Lato", Arial, sans-serif;
 
 $font-description-medium-desktop: 200 2rem/1.5 "Oswald", Arial, sans-serif;
 
