--- a/src/sass/blocks/additional-product-list.scss
+++ b/src/sass/blocks/additional-product-list.scss
@@ -1,18 +1,176 @@
 .additional-product-list__item {
   width: 280px;
-  min-height: 98px;
+  min-height: 130px;
+
+  padding: 13px 0 19px;
 
   display: grid;
-  grid-template-columns: repeat(2, 140px);
+  grid-template-columns: auto;
   grid-template-rows: auto auto auto;
+
+  &:first-child {
+    border-top: 1px solid $background-color-8;
+    border-bottom: 1px solid $background-color-8;
+  }
+
+  &:nth-child(2) {
+    border-bottom: 1px solid $background-color-8;
+  }
+
+  &:nth-child(3) {
+    border-bottom: 1px solid $background-color-8;
+  }
+
+  &:last-child {
+    border-bottom: 1px solid $background-color-8;
+  }
 
   @media (min-width: $tablet-width) {
     width: 708px;
     min-height: 139px;
+
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+
+    padding: 26px 37px 28px;
+    border-right: 1px solid $background-color-8;
+    border-left: 1px solid $background-color-8;
   }
 
   @media (min-width: $desktop-width) {
     width: 896px;
     min-height: 72px;
+
+    grid-template-columns: 325px 285px auto 244px;
+    grid-template-rows: auto;
+    align-items: center;
+
+    padding: 25px 0 27px;
+    border-right: none;
+    border-left: none;
+  }
+}
+
+.additional-product-list__title {
+  @include indent-reset;
+
+  font: $font-card-title-mobile;
+  line-height: 1;
+  text-transform: uppercase;
+  color: $color-13;
+
+  margin-bottom: 13px;
+
+  @media (min-width: $tablet-width) {
+    font: $font-card-title-tablet;
+    line-height: 1;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 0;
+  }
+}
+
+.additional-product__amount {
+  display: flex;
+  justify-content: space-between;
+
+  margin-bottom: 15px;
+
+  @media (min-width: $tablet-width) {
+    justify-self: end;
+    width: 233px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 285px;
+
+    justify-content: space-between;
+
+    margin-bottom: 0;
+  }
+}
+
+.additional-product__amount-package {
+  font: $font-text-small-mobile;
+  line-height: 1;
+  color: $color-5;
+
+  @media (min-width: $tablet-width) {
+    font: $font-text-small-tablet;
+    line-height: 1.25;
+
+    display: block;
+
+    margin-right: 49px;
+  }
+
+  @media (min-width: $tablet-width) {
+    margin-right: 0;
+  }
+}
+
+.additional-product__amount-price {
+  font: $font-text-small-mobile;
+  line-height: 1;
+  color: $color-5;
+
+  @media (min-width: $tablet-width) {
+    font: $font-text-small-tablet;
+    line-height: 1.25;
+  }
+}
+
+.additional-product__button {
+  @include link-reset;
+  font: $font-catalog-button-mobile;
+  color: $color-2;
+  text-transform: uppercase;
+  text-align: center;
+
+  display: block;
+
+  width: 100%;
+  min-height: 40px;
+
+  padding: 10px 0;
+
+  &:hover {
+    background-color: $background-color-3-hover;
+  }
+
+  &:active {
+    color: rgba($color-2, 30%);
+  }
+
+  @media (min-width: $tablet-width) {
+    grid-column: 1 / -1;
+    grid-row: 2 / 3;
+  }
+
+  @media (min-width: $desktop-width) {
+    min-height: 40px;
+
+    grid-column: 4 / 5;
+    grid-row: 1 / -1;
+  }
+}
+
+.additional-product__gift {
+  position: relative;
+
+  &::after {
+    content: "";
+    display: block;
+
+    width: 280px;
+    height: 290px;
+
+    background-color: rgba($background-color-3, 85%);
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
   }
 }
