--- a/src/sass/blocks/catalog-card.scss
+++ b/src/sass/blocks/catalog-card.scss
@@ -3,6 +3,10 @@
 
   @media (min-width: $tablet-width) {
     background-color: $background-color-4;
+
+    &--show-more {
+      background-color: $background-color-2;
+    }
   }
 }
 
@@ -10,6 +14,20 @@
   grid-column: 1 / 2;
   justify-self: center;
   align-self: center;
+
+  &--show-more {
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
+
+    margin-bottom: 23px;
+
+    @media (min-width: $tablet-width) {
+      grid-column: 1 / -1;
+      grid-row: 1 / 2;
+
+      margin-bottom: 34px;
+    }
+  }
 }
 
 .catalog-card__heading {
@@ -17,7 +35,7 @@
 
   margin-bottom: 13px;
 
-  font: $font-catalog-button-mobile;
+  font: $font-card-title-mobile;
   text-transform: uppercase;
 
   min-width: 76px;
@@ -25,22 +43,110 @@
 
   grid-column: 2 / 3;
   grid-row: 1 / 2;
+
+  &--show-more {
+    grid-column: 1 / -1;
+    grid-row: 2 / 3;
+
+    margin-bottom: 0;
+
+    max-width: 100%;
+
+    text-align: center;
+  }
+
+  @media (min-width: $tablet-width) {
+    grid-column: 1 / -1;
+    grid-row: 2 / 3;
+
+    margin: 0 auto;
+    margin-bottom: 13px;
+
+    max-width: 125px;
+
+    font: $font-card-title-tablet;
+    text-align: center;
+
+    &--show-more {
+      max-width: 135px;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 145px;
+  }
 }
 
 .catalog-card__compound-container {
   grid-column: 2 / 3;
   grid-row: 1 / 2;
+
+  @media (min-width: $tablet-width) {
+    grid-column: 1 / -1;
+    grid-row: 2 / 3;
+  }
 }
 
 .catalog-card__compound {
   display: flex;
   justify-content: space-between;
+
+  position: relative;
+
+  @media (min-width: $tablet-width) {
+    &::after {
+      content: "";
+      display: block;
+
+      width: 100%;
+      height: 1px;
+
+      background-color: $background-color-8;
+
+      position: absolute;
+      bottom: -8px;
+    }
+
+    &:not(:last-of-type) {
+      margin-bottom: 14px;
+    }
+  }
 }
 
 .catalog-card__compound-item {
   font: $font-text-extra-small-mobile;
   color: $color-5;
   line-height: 1.33;
+
+  @media (min-width: $tablet-width) {
+    font: $font-text-extra-small-tablet;
+    line-height: 1;
+  }
+}
+
+.catalog-card__text {
+  @include indent-reset;
+
+  font: $font-text-extra-small-mobile;
+  line-height: 1.33;
+  text-align: center;
+  color: $color-5;
+
+  &--show-more {
+    grid-column: 1 / -1;
+    grid-row: 3 / 4;
+
+    margin-bottom: 21px;
+  }
+
+  @media (min-width: $tablet-width) {
+    font: $font-text-extra-small-tablet;
+    line-height: 1.12;
+
+    max-width: 165px;
+
+    justify-self: center;
+  }
 }
 
 .catalog-card__button {
@@ -55,10 +161,25 @@
   align-self: center;
 
   @include link-reset;
-  font: $font-button-small-mobile;
+  font: $font-catalog-button-mobile;
   color: $color-2;
   text-transform: uppercase;
   text-align: center;
+
+  &--show-more {
+    grid-column: 1 / -1;
+    grid-row: 4 / 5;
+
+    color: $color-5;
+
+    &:hover:hover {
+      background-color: $background-color-9;
+    }
+
+    &:active:active {
+      color: rgba($color-5, 30%);
+    }
+  }
 
   &:hover {
     background-color: $background-color-3-hover;
@@ -66,5 +187,11 @@
 
   &:active {
     color: rgba($color-2, 30%);
+  }
+
+  @media (min-width: $tablet-width) {
+    grid-column: 1 / -1;
+    grid-row: 4 / 5;
+    align-self: end;
   }
 }
