--- a/src/sass/blocks/comment.scss
+++ b/src/sass/blocks/comment.scss
@@ -24,9 +24,11 @@
 
   margin-bottom: 38px;
 
-  line-height: 1.08;
+  font: $font-title-form-small-mobile;
 
   @media (min-width: $tablet-width) {
     margin-bottom: 76px;
+
+    font: $font-title-form-small-tablet;
   }
 }
